# SyntheticDID

./: .gitignore  LICENSE  pyproject.toml  readme.md
example/: example.ipynb  exp_single.ipynb  exp_staggered.ipynb
src/sdid/: __init__.py  _inferer.py  _optimizer.py  _plotter.py  model.py
tests/: example.ipynb
